<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/formTitle"
        android:id="@+id/textView"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:layout_gravity="center"
        android:textSize="14pt"
        android:textColor="#000000" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_below="@+id/textView"
        android:id="@+id/streetLinearLayout">

        <TextView
            android:id="@+id/mTxtView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/streetAddressLabel"
            android:textSize="10pt"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/mEdttxt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="text"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:id="@+id/cityLinearLayout"
        android:layout_below="@+id/streetLinearLayout">

        <TextView
            android:id="@+id/mTxtView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cityNameLabel"
            android:textSize="10pt"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/mEdttxt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="text"
            android:textColor="#000000" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_below="@+id/cityLinearLayout"
        android:id="@+id/stateLinearLayout">

        <TextView
            android:id="@+id/mTxtView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stateNameLabel"
            android:textSize="10pt"
            android:textColor="#000000" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_weight="0.5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:drawSelectorOnTop="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_below="@+id/stateLinearLayout"
        android:id="@+id/temperature">

        <TextView
            android:id="@+id/mTxtView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stateNameLabel"
            android:textSize="10pt"
            android:textColor="#000000" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.5"
            android:id="@+id/radioGroup">
            <RadioButton android:id="@+id/radio_fahrenheit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fahrenheit"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_celsius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/celsius"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

    </LinearLayout>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="About"
        android:id="@+id/aboutButton"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="-35dp"/>

    <ImageButton
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:id="@+id/imageButton"
        android:maxWidth="40dp"
        android:background="@drawable/forecast_logo"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/temperature" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchButton"
        android:id="@+id/searchButton"
        android:layout_below="@+id/temperature"
        android:layout_alignStart="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clearButton"
        android:id="@+id/clearButton"
        android:layout_alignTop="@+id/searchButton"
        android:layout_alignEnd="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textView4"
        android:layout_below="@+id/searchButton"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
